# nowcasting-project

./: .dockerignore  .gitignore  docker-compose.yml
ingestion/: Dockerfile  pyproject.toml  sources.example.json
ingestion/adapters/: __init__.py  base.py  cbr.py  cbr_secinfo.py  cbr_trade_balance.py  eia.py  exchangerates.py  fred.py  manual_csv.py  minfin_oilgas.py  moex.py  profinance.py  rosstat_cpi_live.py  rosstat_industrial.py  rosstat_retail_sales.py  ru_tax_dummy_calendar.py  tradingview.py  web.py  yahoo.py
ingestion/api/: __init__.py  app.py
ingestion/api/routes/: deps.py  exports.py  jobs.py  (+1 more)
ingestion/core/: __init__.py  config.py  logging.py
ingestion/scheduler/: __init__.py  jobs.py  scheduler.py
ingestion/schemas/: __init__.py  exports.py  jobs.py  observations.py  source_table.py  sources.py
ingestion/scripts/: __init__.py  check_isdayoff.py  load_csv_source.py  refresh_exchangerates_session.js  run_cbr_ru_money_credit_live.py  run_cbr_ru_trade_balance_live.py  run_minfin_ru_fiscal_oilgas_live.py  run_ru_retail_sales_live.py
ingestion/services/: __init__.py  csv_export_service.py  ingestion_service.py  isdayoff.py  source_indicator_table.py  source_registry.py  validation_service.py
ingestion/workers/: tasks.py
storage/: .dockerignore  Dockerfile  pyproject.toml
storage/alembic/: env.py
storage/config/: settings.py
storage/db/: base.py  session.py
storage/models/: __init__.py  enums.py  observations.py  raw_obsevations.py  series.py  source.py
storage/repositories/: __init__.py  base.py  observation.py  raw_observation.py  series.py  source.py
(+7 files in other folders)
