[project]
name = "ingestion"
version = "0.1.0"
description = ""
authors = [
    {name = "NikolaySolop",email = "nikolay.solop@yandex.ru"}
]
requires-python = ">=3.10"
dependencies = [
    "apscheduler (>=3.11.1,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "fastapi (>=0.124.0,<1.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "greenlet (>=3.5.0,<4.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "uvicorn (>=0.38.0,<1.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
