[project]
name = "storage"
version = "0.1.0"
description = ""
authors = [
    {name = "NikolaySolop",email = "nikolay.solop@yandex.ru"}
]
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.13.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
