[project]
name = "storage"
version = "0.1.0"
description = ""
authors = [
    {name = "NikolaySolop",email = "nikolay.solop@yandex.ru"}
]
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.13.3,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
